# c-race-game-project

./: CMakeLists.txt  LS_allegro.h  carconfiguration.c  carconfiguration.h  category.c  category.h  driverconfiguration.c  driverconfiguration.h  driverraceresult.c  driverraceresult.h  main.c  part.c  part.h  raceconfiguration.c  raceconfiguration.h  racepoint.c  racepoint.h  raceresult.c  raceresult.h  readme.txt  simulation.c  simulation.h  sortedlist.c  sortedlist.h  standing.c  standing.h  standings.c  standings.h
view/: BitMapViewComponent.c  BitMapViewComponent.h  BoxBoundViewComponent.c  BoxBoundViewComponent.h  CarBoxComponent.c  CarBoxComponent.h  Class.c  Class.h  ConfigurationPanelComponent.c  ConfigurationPanelComponent.h  TextViewComponent.c  TextViewComponent.h  ViewComponent.c  ViewComponent.h
